Fixes CSS overflow

--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -1,3 +1,6 @@
+html {
+	overflow-x: hidden;
+}
 body {
 	background: #141414;
 	font-family: "Ubuntu Mono",Menlo,Monaco,Consolas,"Courier New",monospace;
